<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/title_layout" />

    <com.youth.banner.Banner
        android:id="@+id/advBanner"
        android:layout_width="match_parent"
        android:layout_height="80dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/score" />

                <TextView
                    android:id="@+id/scoreView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12789"
                    android:textColor="@android:color/holo_red_light" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ruleView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="@string/rule" />

            </LinearLayout>

        </LinearLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/functionView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/titleGoodsView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:color/darker_gray"
            android:gravity="bottom"
            android:paddingBottom="2dp"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:text="@string/goodsTitle"
            android:textSize="18sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/goodsView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>


</LinearLayout>