<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include
        layout="@layout/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp">

                <RelativeLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginTop="0dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/faceView"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="8dp"
                        app:srcCompat="@mipmap/ic_launcher_round" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_toRightOf="@+id/faceView"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:text="积分"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/myAmountView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="128"
                            android:textSize="14sp" />
                    </LinearLayout>

                </RelativeLayout>


                <TextView
                    android:id="@+id/usernameTitleView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="false"
                    android:layout_below="@id/linearLayout"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:text="张小红房东"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgView1"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginLeft="8dp"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <TextView
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/user_name"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/nameView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:text="张小红房东"
                    android:textSize="16sp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgView2"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginLeft="8dp"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <TextView
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/mobile_no"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/mobileNoView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:text="张小红房东"
                    android:textSize="16sp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgView3"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginLeft="8dp"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <TextView
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/user_id"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/idView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:text="张小红房东"
                    android:textSize="16sp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgView4"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginLeft="8dp"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <TextView
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/bank_no"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/bankNoView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:text="张小红房东"
                    android:textSize="16sp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgView5"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginLeft="8dp"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/emergency_no"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/emergencyNoView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:text="张小红房东"
                    android:textSize="16sp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgView6"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginLeft="8dp"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <TextView
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/room_no"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/roomNoView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:text="张小红房东"
                    android:textSize="16sp"/>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>